# egsnrc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  egsnrc_bashrc_additions  pyproject.toml  requirements.txt  setup.py
.github/workflows/: PR.yml  main.yml  merge.yml  tests.yml
doc/: conf.py  tutor_examples.rst
egsnrc/: __init__.py  angles.py  annih.py  bhabha.py  brems.py  calcfuncs.py  commons.py  compton.py  config.py  constants.py  egsrandom.py  electr.py  electr_steps.py  elements.py  hatch.py  logging.conf  media.py  moller.py  pair.py  params.py  particles.py  photo.py  photon.py  random.py  randoms.py  ranlux.py  regions.py  russian.py  shower.py  toyphoton.py  uphi.py  util.py  vect.py  watch.py
egsnrc/HEN_HOUSE/src/: egsnrc.macros  egsnrc_py.mortran  electr.mortran  hatch.mortan  pair.mortran  sample_triplet.mortran  shower.mortran
egsnrc/HEN_HOUSE/user_codes/tutor4/: tutor4.mortran
egsnrc/data/: xcom_compton.data
egsnrc/egs_home/tutor4/: README.md  egsfortran.pyf  make_egsfortran.py  orig-tutor4-detailed-vals.txt  py_tut4_pos_compute_elosses.txt  tutor4.mortran  tutor4.py  tutor4_linux.f  tutor_data.pegs4dat  watch2.txt
egsnrc/examples/: example1.ipynb  example1.py  toy1.py  toy2.py
egsnrc/expts/: egsnrc_modified_COMPT.mortran  jitdataclass.py  run10MeV_Si.txt  run_output.txt  tutor7.egsinp  tutor7_10MeV_Si.egsinp
egsnrc/expts/compt/: TorchVectCompt.ipynb  numba_compton.py  numba_kernal_compton.py  numba_kernel_compton.py  py_compton_1_sample_outputs.txt  pycompton.py  pyvect_compton.py  torchvect_compton.py
egsnrc/expts/photon/: photon_class.py
egsnrc/expts/py/: pycompton.py  pyvect_compton.py
egsnrc/expts/sim1/: photon.py  sim1.ipynb  sim1.py
egsnrc/old/: photon.py  toyphoton.py
egsnrc/tests/: test_compton.py  test_hatch.py  test_medium.py  test_randoms.py  test_tutor4.py  test_util.py
egsnrc/tests/data/: calc-tstep.txt  calc-xi.txt  calc_not_exact_bca.txt  compute-drange.txt  compute-eloss-g.txt  compute-eloss.txt  egsfor_electr-watch2-extra_prec.txt  egsnrc.mortran_gen_sigmas_sample_Si.mortran  fort_tut4_calcfuncs.txt  fort_tut4_compute_elosses.txt  fort_tut4_pos_compute_elosses.txt  fort_tut4_pos_outputs.txt  gen_sigmas_sample.xsections  orig-tutor4-watch2-extra-prec.txt  orig-tutor4-watch2.txt  original-tutor4.txt  two_slab.py
egsnrc/tests/data/two_slab/: egsnrc.mortran  two_slab.egsinp  two_slab.mortran
egsnrc/tests/data/xoro_random/: xoro_gpu.py
egsnrc/transpile/: angles_transpile.py  annih_transpile.py  bhabha_transpile.py  brems_transpile.py  moller_transpile.py  pair_autotranspile.py  photo_transpile.py  photon_transpile.py  russian_transpile.py  sample_triplet_transpile.py
egsnrc/vect/: vphoton.py  vphoton_jax.py
src/egsnrc/: __init__.py  _version.py  angles.py  calcfuncs.py  compton.py  config.py  constants.py  egsrandom.py  electr.py  electr_steps.py  elements.py  hatch.py  logging.conf  media.py  pair.py  particles.py  photo.py  photon.py  regions.py  shower.py  util.py  watch.py
src/egsnrc/HEN_HOUSE/src/: bhabha.mortran  brems.mortran  uphi.mortran  watch.mortran
src/egsnrc/egs_home/tutor4/: make_egsfortran.py  tutor4.make  tutor4.py
src/egsnrc/examples/: example1.ipynb  example1.py  toy1.py  toy2.py
src/egsnrc/old/: photon.py  toyphoton.py
tests/: test_compton.py  test_hatch.py  test_medium.py  test_randoms.py  test_tutor4.py  test_util.py
tests/data/: fort_tut4_elec_outputs.txt  gen_sigmas_sample_Si.xsections  two_slab.py
tests/data/samp_mfp_gbr/: gen_sigmas_sample.egsinp  tutor7.mortran_gen_sigmas_sample_Si.mortran
tests/data/two_slab/: Makefile
tests/xoro_random/: xoro_gpu.py
transpile/: bhabha_transpile.py  brems_transpile.py  moller_transpile.py  pair_autotranspile.py  pair_transpile.py  photon_transpile.py  russian_transpile.py  sample_triplet_autotranspile.py  sample_triplet_transpile.py  shower_transpile.py
