[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
    {name = "Darcy Mason and contributors", email = "darcymason@gmail.com"}
]
classifiers=[
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "Numba>=0.57,<1"  # in turn requires numpy
]
# Get __version__ and description (docstring) from __init__.py

description = "EGSnrc Radiation Transport code in Python with GPU"
keywords = ["Monte Carlo", "Python", "Radiation Transport", "Simulation"]

license = {file = "LICENSE"}
name = "egsnrc"
readme = "README.md"
requires-python = ">=3.10,<4"
version = "0.1.0.dev0"


[project.optional-dependencies]
dev = [
    "mypy==1.10.0",
    "ruff==0.4.4",
    "pytest",
    "pytest-cov"
]

[project.urls]
# documentation = ""
download = "https://github.com/darcymason/egsnrc/archive/master.zip"
homepage = "https://github.com/darcymason/egsnrc"
repository = "https://github.com/darcymason/egsnrc"

[tool.ruff]
exclude = ["transpile"]
select = [
    "C9",
    "E",
    "F",
    "PL",
    "W",
]
ignore = [
    "E402",
    "F401",
    "F403",
    "F405",
    "F541",
    "F601",
    "F811",
    "F841",
    "PLR5501",
    "PLC1901",
    "PLR2004",
    "PLW0603",
    "PLW2901",
]
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
# ignore undefined variable due to Numba globals added to module at runtime
"photon.py" = ["F821"] 
# ignored pair while developing it
"pair.py" = ["F821", "E741"]
"electr_steps.py" = ["PLR0912", "PLR0915"]  # too many branches, statements

[tool.ruff.mccabe]
max-complexity = 92

[tool.ruff.pylint]
max-args = 17
max-branches = 120
max-returns = 11
max-statements = 378